# bolletta_sync

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-pkg.yml
bolletta_agent/: agent.py  main.py
bolletta_storage_agent/: agents.py
bolletta_sync/: __main__.py  app.py  main.py
bolletta_sync/providers/: base_provider.py  eni.py  fastweb.py  fastweb_energia.py  umbra_acque.py
my_agent/: agent.py  agents.py  app.py  main.py
my_agent/tools/: fastweb.py  fastweb_energia.py
