[project]
name = "bolletta-sync"
version = "0.1.1"
description = ""
authors = [
    {name = "Gabriele Sorci", email = "gabrielesorci.25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.12.4",
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "beautifulsoup4==4.13.5",
    "google-api-python-client==2.187.0",
    "google-auth-oauthlib==1.2.3",
    "playwright==1.56.0",
    "playwright-recaptcha==0.5.1",
    'standard-aifc==3.13.0',
    "asyncio==4.0.0",
    "pyside6==6.10.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.16.0"
]